Animaciones en el index responsive

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -231,34 +231,55 @@ ul {
     margin: 0 5vh 5% 5vh;
 }
 
-.index-imgs {
-    width: 40%;
-    object-fit: cover;
-    margin: 0 5vh;
-    box-shadow: $box-shadow-imgs;
-}
-
 /* Articulo 1 */
 .index-articulo-1 {
     display: flex;
 
-    div {
+    .div-parrafos {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        width: 60%;
+        z-index: -1;
+    }
+
+    .index-div-img-1 {
+        width: 40%;
+        margin: 0 5vh;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            box-shadow: $box-shadow-imgs;
+        }
     }
 }
 
 /* Articulo 2 */
 .index-articulo-2 {
     display: flex;
-    padding-top: 20vh;
+    padding-top: 10vh;
 
-    div {
+    .div-parrafos {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
+        width: 60%;
+        z-index: -1;
+    }
+
+    .index-div-img-2 {
+        width: 40%;
+        margin: 0 5vh;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            box-shadow: $box-shadow-imgs;
+        }
     }
 }
 
@@ -505,28 +526,43 @@ ul {
 
     .index-parrafos-top {
         font-size: 1rem;
-        margin: 0 10vh 2vh 10vh;
+        margin: 0 3vh 2vh 3vh;
     }
 
     .index-parrafos {
         font-size: 1rem;
-        margin: 0 10vh 2vh 10vh;
+        margin: 0 3vh 2vh 3vh;
     }
 
-    .index-imgs {
-        width: 85%;
-        margin: 2vh 0;
-    }
-
+    /* Articulo 1 */
     .index-articulo-1 {
         flex-flow: column wrap;
-        align-items: center;
+
+        .div-parrafos {
+            width: 100%;
+        }
+
+        .index-div-img-1 {
+            width: 100%;
+            margin: 0;
+            padding: 2vh;
+        }
     }
 
+    /* Articulo 2 */
     .index-articulo-2 {
         flex-flow: column-reverse wrap;
-        align-items: center;
-        padding: 2vh 0;
+        padding-top: 2vh;
+
+        .div-parrafos {
+            width: 100%;
+        }
+
+        .index-div-img-2 {
+            width: 100%;
+            margin: 0;
+            padding: 2vh;
+        }
     }
 
     /* PRODUCTOS */
@@ -572,20 +608,18 @@ ul {
     }
 
     /* index */
+    .index-seccion-2 {
+        padding: 2vh 0;
+    }
+
     .index-parrafos-top {
         font-size: 1rem;
-        margin: 0 4vh 2vh 4vh;
+        margin: 0 2vh 2vh 2vh;
     }
 
     .index-parrafos {
         font-size: 1rem;
-        margin: 0 4vh 2vh 4vh;
-    }
-
-    .index-imgs {
-        height: 100%;
-        width: 90%;
-        margin: 2vh 0;
+        margin: 0 2vh 2vh 2vh;
     }
 
     /* PRODUCTOS */
