--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -308,13 +308,26 @@ ul {
 .card {
   margin: 0 3vh 0 3vh;
 }
+.card:hover {
+  animation: shadow-drop-2-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 .card-group {
   margin: 5vh;
 }
 .card img:hover {
-  border: 1px solid #FBCA04;
+  border: 2px solid #FBCA04;
 }
 
+@keyframes shadow-drop-2-center {
+  0% {
+    transform: translateZ(0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    transform: translateZ(50px);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
+  }
+}
 .list-style-type-disc {
   list-style-type: disc;
 }
