--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -350,12 +350,28 @@ ul {
 .card {
     margin: 0 3vh 0 3vh;
 
+    &:hover {
+        animation: shadow-drop-2-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+
     &-group {
         margin: 5vh;
     }
 
     img:hover {
-        border: 1px solid #FBCA04;
+        border: 2px solid #FBCA04;
+    }
+}
+
+@keyframes shadow-drop-2-center {
+    0% {
+        transform: translateZ(0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        transform: translateZ(50px);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
     }
 }
 
