Anm a sobrenosotros, arreglo form, agrego active

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -35,6 +35,11 @@ ul {
 }
 
 /* NAVBAR */
+.active {
+  border-top: 4px solid #FBCA04;
+  color: #fff;
+}
+
 .navbar {
   background-color: #034494;
   padding: 1px;
@@ -77,10 +82,6 @@ ul {
 .navbar-expand-lg .navbar-nav .nav-link:hover {
   border-top: 4px solid #FBCA04;
   color: #EA1D24;
-}
-.navbar-expand-lg .navbar-nav .nav-link:active {
-  border-top: 4px solid #EA1D24;
-  color: #fff;
 }
 .navbar-expand-lg .navbar-nav button {
   padding: 1.2rem 5rem;
@@ -350,7 +351,20 @@ ul {
   object-fit: cover;
   box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
 }
+.sobrenosotros-imgs img:hover {
+  animation: shadow-drop-2-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 
+@keyframes shadow-drop-2-center {
+  0% {
+    transform: translateZ(0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    transform: translateZ(50px);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
+  }
+}
 .sobrenosotros-texto {
   display: flex;
   flex-direction: column;
@@ -367,8 +381,8 @@ ul {
 
 .contacto-img {
   display: flex;
-  height: 100vh;
   width: 40%;
+  height: 100vh;
   margin: 10vh 0;
   box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
 }
@@ -381,6 +395,8 @@ ul {
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  height: 100vh;
   width: 40%;
   border-radius: 10%;
   box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
@@ -471,6 +487,9 @@ ul {
   .navbar-expand-lg .navbar-nav .nav-link {
     padding: 0.8rem 1.2rem;
   }
+  .active {
+    border-bottom: 4px solid #FBCA04;
+  }
   .logo-inicio {
     max-width: 10vh;
   }
@@ -528,9 +547,9 @@ ul {
     width: 90%;
     margin: 5vh 0;
   }
-  form {
-    width: 90%;
+  .form {
     margin-bottom: 5vh;
+    width: 90%;
   }
 }
 /* TODO: MOVIL */
