agrego: carpetas sass, animaciones sobrenosotros y servicios y limpio imgs

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,4 +1,6 @@
-/* *CSS Glogal */
+/* Abstracts */ /* Variables Globales */
+/* Base */
+/* Reset Global*/
 html,
 body {
   margin: 0;
@@ -14,30 +16,56 @@ body {
   background-color: rgb(230, 230, 230);
 }
 
+/* Componentes */
+/* Buttons formulario */
+.button-reset,
+.button-enviar {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #EA1D24 0, #5468ff 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.button:focus {
+  box-shadow: #FBCA04 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+.button:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+.button:active {
+  box-shadow: #FBCA04 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+/* Layout */
+/* NAVBAR */
 .logo-inicio {
   max-width: 12vh;
-}
-
-a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 500;
-}
-a:visited {
-  color: #fff;
-}
-a:hover {
-  color: #FBCA04;
-}
-
-ul {
-  list-style-type: none;
-}
-
-/* NAVBAR */
-.active {
-  border-top: 4px solid #FBCA04;
-  color: #fff;
 }
 
 .navbar {
@@ -87,60 +115,12 @@ ul {
   padding: 1.2rem 5rem;
 }
 
-/* IMG inicio */
-.seccion-principal {
-  background-image: url(../../imgs/puerta-local-lejos-3.jpeg);
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Footer */
-.footer {
-  background: rgb(234, 29, 36);
-  background: linear-gradient(90deg, rgb(234, 29, 36) 5%, rgb(3, 68, 148) 10%, rgb(3, 68, 148) 90%, rgb(234, 29, 36) 95%);
-  color: #fff;
-  display: flex;
-  justify-content: space-evenly;
-}
-.footer-icons {
-  display: flex;
-  align-items: center;
-}
-.footer-icons a {
-  margin: 0 5vh;
-}
-.footer-icons a i:link {
+.active {
+  border-top: 4px solid #FBCA04;
   color: #fff;
 }
-.footer-icons a i:visited {
-  color: #fff;
-}
-.footer-copyright {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 2vh 4vh;
-}
-.footer-copyright h3 {
-  font-size: 1.4rem;
-}
 
-.facebook:hover {
-  color: #1771E6;
-}
-
-.whatsapp:hover {
-  color: #4AC959;
-}
-
-/* TODO: Flex Grid */
+/* Grid */
 .grid-all {
   min-height: 100vh;
   display: grid;
@@ -169,13 +149,68 @@ ul {
 .asides {
   background: rgb(234, 29, 36);
   background: linear-gradient(0deg, rgb(234, 29, 36) 30%, rgb(3, 68, 148) 70%);
+  z-index: 10;
 }
 
 .grid-footer {
   grid-area: footer;
 }
 
-/* *Index */
+/* Footer */
+.footer {
+  background: rgb(234, 29, 36);
+  background: linear-gradient(90deg, rgb(234, 29, 36) 5%, rgb(3, 68, 148) 10%, rgb(3, 68, 148) 90%, rgb(234, 29, 36) 95%);
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+}
+.footer-icons {
+  display: flex;
+  align-items: center;
+}
+.footer-icons a {
+  margin: 0 5vh;
+  color: #fff;
+}
+.footer-icons a i.fa:link {
+  color: #fff;
+}
+.footer-icons a i.fa:visited {
+  color: #fff;
+}
+.footer-copyright {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 2vh 4vh;
+}
+.footer-copyright h3 {
+  font-size: 1.4rem;
+}
+
+.facebook:hover {
+  color: #1771E6;
+}
+
+.whatsapp:hover {
+  color: #4AC959;
+}
+
+/* Pages */
+/* Index */
+.seccion-principal {
+  background-image: url(../../imgs/puerta-local-lejos-3.jpeg);
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .texto-imagen-inicio {
   text-align: center;
   font-size: 1.7rem;
@@ -223,10 +258,7 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
-}
-.index-articulo-1 .index-div-img-1 img:hover {
-  animation: shadow-drop-2-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 
 /* Articulo 2 */
@@ -250,7 +282,7 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 
 /* Links */
@@ -276,7 +308,7 @@ ul {
   width: 100%;
 }
 
-/* *Productos */
+/* Productos */
 .productos-frase-productos {
   display: flex;
   margin: 5vh 10vh 5vh 10vh;
@@ -302,18 +334,16 @@ ul {
   margin: 5px;
   text-align: center;
 }
-.productos-contain-imgs img {
+.productos-contain-imgs div img {
   width: 200px;
   height: 200px;
   border: 2px solid rgba(0, 0, 0, 0.3);
 }
-
 /* *Servicios */
 .card {
   margin: 0 3vh 0 3vh;
-}
-.card:hover {
-  animation: shadow-drop-2-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  z-index: -1;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 .card-group {
   margin: 5vh;
@@ -322,16 +352,6 @@ ul {
   border: 2px solid #FBCA04;
 }
 
-@keyframes shadow-drop-2-center {
-  0% {
-    transform: translateZ(0);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    transform: translateZ(50px);
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
-  }
-}
 .list-style-type-disc {
   list-style-type: disc;
 }
@@ -348,34 +368,23 @@ ul {
 .sobrenosotros-imgs {
   display: flex;
   margin: 1vh 0;
+  z-index: 2;
 }
 .sobrenosotros-imgs img {
   width: 100%;
   object-fit: cover;
-  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
-}
-.sobrenosotros-imgs img:hover {
-  animation: shadow-drop-2-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 
-@keyframes shadow-drop-2-center {
-  0% {
-    transform: translateZ(0);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
-  100% {
-    transform: translateZ(50px);
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
-  }
-}
 .sobrenosotros-texto {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 2vh;
+  z-index: 1;
 }
 
-/* *Contacto */
+/* Contacto */
 .contacto__seccion {
   display: flex;
   align-items: center;
@@ -387,7 +396,7 @@ ul {
   width: 40%;
   height: 100vh;
   margin: 10vh 0;
-  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 .contacto-img img {
   object-fit: cover;
@@ -402,7 +411,7 @@ ul {
   height: 100vh;
   width: 40%;
   border-radius: 10%;
-  box-shadow: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
+  box-shadow: rgba(56, 51, 51, 0.774) 0px 7px 29px 0px;
 }
 .form-casillas {
   display: flex;
@@ -435,53 +444,8 @@ ul {
   margin: 2vh 0;
 }
 
-/* Buttons formulario */
-.button-reset,
-.button-enviar {
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #EA1D24 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono", monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow 0.15s, transform 0.15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow, transform;
-  font-size: 18px;
-}
-
-.button:focus {
-  box-shadow: #FBCA04 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-}
-.button:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-.button:active {
-  box-shadow: #FBCA04 0 3px 7px inset;
-  transform: translateY(2px);
-}
-
-/* TODO: Media Querys */
-/* TODO: TABLET */
+/* Media Querys */
+/* TABLET */
 @media screen and (max-width: 991px) {
   /* CSS Global */
   .navbar {
