--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,546 +1,26 @@
-$box-shadow-imgs: rgba(100, 100, 111, 0.5) 0px 7px 29px 0px;
-$color-white: #fff;
-$animation-hover-boxshadow: shadow-drop-2-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
-/* *CSS Glogal */
-html,
-body {
-    margin: 0;
-    font-family: 'Lora', serif;
-    font-size: 15px;
-    line-height: 1.5;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    top: 0;
-}
-
-body {
-    background-color: rgb(230, 230, 230);
-}
-
-.logo-inicio {
-    max-width: 12vh;
-}
-
-a {
-    text-decoration: none;
-    color: $color-white;
-    font-weight: 500;
-
-    &:visited {
-        color: $color-white;
-    }
-
-    &:hover {
-        color: #FBCA04;
-    }
-}
-
-ul {
-    list-style-type: none;
-}
-
-/* NAVBAR */
-.active {
-    border-top: 4px solid #FBCA04;
-    color: $color-white;
-}
-.navbar {
-    background-color: #034494;
-    padding: 1px;
-    min-height: 10vh;
-
-    &-toggler {
-        background: #EA1D24;
-        border: none;
-        padding: 10px 6px;
-        outline: none;
-
-        span {
-            display: block;
-            width: 22px;
-            height: 2px;
-            border: 1px;
-            background: $color-white;
-        }
-
-        span+span {
-            margin-top: 4px;
-            width: 18px;
-            margin-left: 4px;
-        }
-
-        span+span+span {
-            width: 10px;
-            margin-left: 12px;
-        }
-    }
-
-    &-expand-lg {
-        padding-right: 2vh;
-
-        .navbar-collapse {
-            flex-direction: row-reverse;
-        }
-
-        .navbar-nav {
-            .nav-link {
-                padding: 1rem 1.2rem;
-                font-size: 1.4rem;
-                position: relative;
-                color: $color-white;
-
-                &:hover {
-                    border-top: 4px solid #FBCA04;
-                    color: #EA1D24;
-                }
-            }
-
-            button {
-                padding: 1.2rem 5rem;
-            }
-        }
-    }
-}
-
-/* IMG inicio */
-.seccion-principal {
-    background-image: url(../../imgs/puerta-local-lejos-3.jpeg);
-    height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Footer */
-.footer {
-    background: rgb(234, 29, 36);
-    background: linear-gradient(90deg, rgba(234, 29, 36, 1) 5%, rgba(3, 68, 148, 1) 10%, rgba(3, 68, 148, 1) 90%, rgba(234, 29, 36, 1) 95%);
-    color: $color-white;
-    display: flex;
-    justify-content: space-evenly;
-
-    &-icons {
-        display: flex;
-        align-items: center;
-
-        a {
-            margin: 0 5vh;
-
-            i {
-                &:link {
-                    color: $color-white;
-                }
-
-                &:visited {
-                    color: $color-white;
-                }
-            }
-        }
-    }
-
-    &-copyright {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        margin: 2vh 4vh;
-
-        h3 {
-            font-size: 1.4rem;
-        }
-    }
-}
-
-.facebook:hover {
-    color: #1771E6;
-}
-
-.whatsapp:hover {
-    color: #4AC959;
-}
-
-/* TODO: Flex Grid */
-.grid-all {
-    min-height: 100vh;
-    display: grid;
-    grid-template-areas:
-        "header header header header"
-        "asideLeft main main asideRight"
-        "footer footer footer footer";
-    grid-template-columns: 1fr 45% 45% 1fr;
-    grid-template-rows: auto auto auto;
-}
-
-/* grid items */
-.grid-header {
-    grid-area: header;
-}
-
-.grid-main {
-    grid-area: main;
-}
-
-.asideLeft {
-    grid-area: asideLeft;
-}
-
-.asideRight {
-    grid-area: asideRight;
-}
-
-.asides {
-    background: rgb(234, 29, 36);
-    background: linear-gradient(0deg, rgba(234, 29, 36, 1) 30%, rgba(3, 68, 148, 1) 70%);
-}
-
-.grid-footer {
-    grid-area: footer;
-}
-
-/* *Index */
-.texto-imagen-inicio {
-    text-align: center;
-    font-size: 1.7rem;
-    background: linear-gradient(to right, #034494ae, #EA1D24ae);
-    border: 2px solid #FBCA04;
-    color: $color-white;
-    border-radius: 20px;
-    line-height: 50px;
-    padding: 3vh;
-}
-
-/* Seccion 2 */
-.index-seccion-2 {
-    display: flex;
-    flex-direction: column;
-    padding: 10vh 0;
-}
-
-.index-parrafos-top {
-    font-size: 1.3rem;
-    margin: 0 5vh 5% 5vh;
-}
-
-.index-parrafos {
-    font-size: 1.3rem;
-    margin: 0 5vh 5% 5vh;
-}
-
-/* Articulo 1 */
-.index-articulo-1 {
-    display: flex;
-
-    .div-parrafos {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        width: 60%;
-        z-index: -1;
-    }
-
-    .index-div-img-1 {
-        width: 40%;
-        margin: 0 5vh;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            box-shadow: $box-shadow-imgs;
-            &:hover {
-                animation: $animation-hover-boxshadow;
-            }
-        }
-    }
-}
-
-/* Articulo 2 */
-.index-articulo-2 {
-    display: flex;
-    padding-top: 10vh;
-
-    .div-parrafos {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        width: 60%;
-        z-index: -1;
-    }
-
-    .index-div-img-2 {
-        width: 40%;
-        margin: 0 5vh;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            box-shadow: $box-shadow-imgs;
-        }
-    }
-}
-
-/* Links */
-.index-sitio-oficial {
-    text-decoration: none;
-
-    &:link {
-        color: #EA1D24;
-    }
-
-    &:visited {
-        color: #EA1D24;
-    }
-}
-
-.index-siguenos {
-    &:link {
-        color: #1765ca;
-    }
-
-    &:visited {
-        color: #1765ca;
-    }
-}
-
-/* Iframe */
-.google-maps iframe {
-    width: 100%;
-}
-
-/* *Productos */
-.productos-frase-productos {
-    display: flex;
-    margin: 5vh 10vh 5vh 10vh;
-    height: 100%;
-    text-align: center;
-    align-items: center;
-    background: rgb(255, 235, 136);
-    background: linear-gradient(90deg, rgba(255, 235, 136, 1) 0%, rgba(255, 255, 255, 1) 40%);
-
-    h3 {
-        margin: 0;
-        padding: 10px;
-    }
-}
-
-.productos-contain-imgs {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-
-    div {
-        display: flex;
-        flex-direction: column;
-        margin: 5px;
-        text-align: center;
-    }
-
-    img {
-        width: 200px;
-        height: 200px;
-        border: 2px solid rgba(0, 0, 0, 0.3);
-    }
-}
-
-/* *Servicios */
-.card {
-    margin: 0 3vh 0 3vh;
-
-    &:hover {
-        animation: $animation-hover-boxshadow;
-    }
-
-    &-group {
-        margin: 5vh;
-    }
-
-    img:hover {
-        border: 2px solid #FBCA04;
-    }
-}
-
-@keyframes shadow-drop-2-center {
-    0% {
-        transform: translateZ(0);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
-
-    100% {
-        transform: translateZ(50px);
-        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
-    }
-}
-
-.list-style-type-disc {
-    list-style-type: disc;
-}
-
-.list-style-type-circle {
-    list-style-type: circle;
-}
-
-/* *Sobre Nosotros */
-.container {
-    margin: 4vh auto;
-}
-
-.sobrenosotros-imgs {
-    display: flex;
-    margin: 1vh 0;
-
-    img {
-        width: 100%;
-        object-fit: cover;
-        box-shadow: $box-shadow-imgs;
-        
-    &:hover {
-        animation: $animation-hover-boxshadow;
-    }
-    }
-}
-
-@keyframes shadow-drop-2-center {
-    0% {
-        transform: translateZ(0);
-        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-    }
-
-    100% {
-        transform: translateZ(50px);
-        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.8);
-    }
-}
-
-.sobrenosotros-texto {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 2vh;
-}
-
-/* *Contacto */
-.contacto__seccion {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.contacto-img {
-    display: flex;
-    width: 40%;
-    height: 100vh;
-    margin: 10vh 0;
-    box-shadow: $box-shadow-imgs;
-
-    img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-    }
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 100vh;
-    width: 40%;
-    border-radius: 10%;
-    box-shadow: $box-shadow-imgs;
-
-    &-casillas {
-        display: flex;
-        padding: 2vh;
-        width: 100%;
-
-        div {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-    }
-
-    &-legend {
-        padding: 1vh 0;
-        text-align: center;
-    }
-
-    &-textarea div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 2vh;
-    }
-}
-
-#textarea-comentario {
-    resize: none;
-}
-
-.form-div-span {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 2vh 0;
-}
-
-/* Buttons formulario */
-.button-reset,
-.button-enviar {
-    align-items: center;
-    appearance: none;
-    background-image: radial-gradient(100% 100% at 100% 0, #EA1D24 0, #5468ff 100%);
-    border: 0;
-    border-radius: 6px;
-    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: $color-white;
-    cursor: pointer;
-    display: inline-flex;
-    font-family: "JetBrains Mono", monospace;
-    height: 48px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s, transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow, transform;
-    font-size: 18px;
-}
-
-.button {
-    &:focus {
-        box-shadow: #FBCA04 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-    }
-
-    &:hover {
-        box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-        transform: translateY(-2px);
-    }
-
-    &:active {
-        box-shadow: #FBCA04 0 3px 7px inset;
-        transform: translateY(2px);
-    }
-}
-
-/* TODO: Media Querys */
-/* TODO: TABLET */
+/* Abstracts */
+@import "./abstracts/variables";
+
+/* Base */
+@import "./base/reset";
+
+/* Componentes */
+@import "./componentes/buttons";
+
+/* Layout */
+@import "./layout/navbar";
+@import "./layout/grid";
+@import "./layout/footer";
+
+/* Pages */
+@import "./pages/index";
+@import "./pages/productos";
+@import "./pages/servicios";
+@import "./pages/sobrenosotros";
+@import "./pages/contacto";
+
+/* Media Querys */
+/* TABLET */
 @media screen and (max-width: 991px) {
 
     /* CSS Global */
